--- a/Doc/Tutorial/chapter_vcf.tex
+++ b/Doc/Tutorial/chapter_vcf.tex
@@ -11,8 +11,8 @@ is described below, therefore for further details of \verb|Bio.VCF| module, plea
 based on the data types specified in the meta-information lines, specifically the \verb|##INFO| and \verb|##FORMAT| lines.
 If these lines are missing or incomplete it will check against the reserved types mentioned in the spec.
 Failing that, it will just return strings.
-
-
+\\
+\\
 
 \noindent Regarding the coordinates associated with each instance:
 
@@ -23,14 +23,14 @@ Failing that, it will just return strings.
     of the first base of the \verb|REF| sequence. Positions are sorted numerically,
     in increasing order.
 
-  \item[\texttt{start}{ end}] \
+  \item[\texttt{start}{,}{ end}] \
 
     denote the coordinates of the entire \verb|REF| sequence in the zero-based, half-open coordinate
     system (see \href{http://genomewiki.ucsc.edu/index.php/Coordinate_Transforms}{Coordinate\_Transforms}), where
     the first base of the contig has an index of 0, and the interval runs up to, but does not include, the base
     at the end index. This indexing scheme is analagous to Python slice notation.
 
-  \item[\texttt{affected\_start}{ affected\_end}] \
+  \item[\texttt{affected\_start}{,}{ affected\_end}] \
 
     are also in the zero-based, half-open coordinate system. These coordinates indicate the precise region
     of the reference genome actually affected by the events denoted in \verb|ALT| (i.e., the minimum
@@ -46,13 +46,15 @@ Failing that, it will just return strings.
 
 \end{description}
 
-\noindent \verb|samples| and \verb|genotype|, not being the title of any column, are left lowercase. The format of the fixed
+\noindent \verb|samples| and \verb|genotype|\\
+not being the title of any column, are left lowercase. The format of the fixed
 fields is from the spec. Comma-separated lists in the \verb|VCF| are converted to lists. In particular,
 one-entry \verb|VCF| lists are converted to one-entry Python lists (see, e.g., \verb|Record.ALT|).
 Semicolon-delimited lists of key=value pairs are converted to Python dictionaries, with flags being given a True value.
 
+\
+\
 
-\noindent This module supports
 
 
 \noindent Metadata regarding the VCF file itself can be investigated through the following attributes:
@@ -72,7 +74,7 @@ Semicolon-delimited lists of key=value pairs are converted to Python dictionarie
 
 \
 
-\noindent plus attributes to handle genotype information:
+\noindent Plus attributes to handle genotype information:
 
 \
 
@@ -246,11 +248,11 @@ True False True T
     return a list of size equal to the number of VCF readers. This list contains the \verb|VCF| record from
     readers that have this variant, and None for readers that don’t have it. The caller must make sure
     that inputs are sorted in the same way and use the same reference otherwise behaviour is undefined.
-
+    \
     \verb|Args|:
             \verb|vcf_record_sort_key|: \
 
-    function that takes a VCF record and returns a
+    Function that takes a VCF record and returns a
     tuple that can be used as a key for comparing and sorting \verb|VCF| records across all readers.
     This tuple defines what it means for two variants to be equal (eg. whether it’s only their
     position or also their allele values), and implicitly determines the chromosome ordering since
@@ -269,21 +271,19 @@ True False True T
     ['TAT', 'T']
     \end{verbatim}
 
-
     \begin{verbatim}
     >>> trim_common_suffix('ACCCCC', 'ACCCCCCCC', 'ACCCCCCC', 'ACCCCCCCCC')
     ['A', 'ACCC', 'ACC', 'ACCCC']
     \end{verbatim}
 
-    \
-
+   
     \end{description}
 
 \section{VCF.Writer class}
 
 \noindent The \verb|VCF.Writer| class provides a way of writing a VCF file.
 \verb|VCF.parser| module supports \verb|close()|, \verb|flush()| and \verb|write_record()| methods.
-
+\
 \noindent Currently, when writing new VCF file you must specify a template \verb|VCF.Reader| object
 which provides the metadata, like this:
 
@@ -304,22 +304,22 @@ which provides the metadata, like this:
 Those functions enable users to retrieve particular records from VCF file describing structural variants,
 depending on provided argument - for example interval of positions within which we seek for structural variants, a list
 of such positions or feature type within which structural variants are present.
-
+\
 
 \noindent Functionality of those fetch methods includes retrieving structural variants corresponding to ranges
 provided in BED files as well as features from GFF files. If you are not familiar with BED file format
 you might be interested in \href{http://www.ensembl.org/info/website/upload/bed.html}{BED} and
 \href{http://gmod.org/wiki/GFF3}{GFF}.
 
-
+\
 \noindent Most of implementation is based on \verb|pybedtools| module - \href{https://daler.github.io/pybedtools/}{pybedtools},
 which support many file formats including VCF, BED and GFF, therefore \verb|pybedtools| package is required.
-
+\
 
 \noindent Due to enormous sizes of some BED and GFF files, some fetch methods are intended to enable user to provide
 stream of particular GFF/BED file from chosen database. It is a beneficial solution allowing users to avoid
 the necessity of saving very big files to local disc.
-
+\
 
 \noindent Below there is a brief description of each fetch method.
 All of them have arguments \verb|verbose| and \verb|vcf| specifying if result should be printed to stdout
@@ -356,7 +356,6 @@ and whether new VCF.Reader object should be created, respectively.
     Chromosome must be specified and interval is optional.
 
   \item[\texttt{fetch\_gff(gff\_file, chrom, feature\_type, location = None, verbose = False, vcf = None)}] \
-
     This method enables to select desired features from a GFF/GFF2/GFF3 file and fetch VCF records
     that correspond to position of those features. Fetch is based on pybedtools 'intersection' method and returns
     a BedTool object of chosen VCF records or new VCF.Reader object.
@@ -391,7 +390,7 @@ we need to import Bio.VCF library:
 
 \end{verbatim}
 
-and then create a VCF.Reader obcject. We can either create object from a local file or we can provide fsock
+\noindent and then create a VCF.Reader obcject. We can either create object from a local file or we can provide fsock
 of corresponding VCF file:
 
 
@@ -413,7 +412,7 @@ located within those sites. If we have this BED file locally on our computer, th
 \end{verbatim}
 
 
-or if we don't, we should provide a stream of chosen BED file and use:
+\noindent or if we don't, we should provide a stream of chosen BED file and use:
 
 
 \begin{verbatim}
@@ -428,7 +427,7 @@ if we want to see all information of every selected record:
 
 
 \begin{verbatim}
->>> bed = vcf.fetch_bed('VCF/chr13bed.bed')
+>>> bed = vcf.fetch_bed('chr13bed.bed')
 >>> for b in bed:
 >>>     print (b.fields)
 ['chr13', '10', '.', 'G', 'GGT', '.', 'PASS', 'DP=91;SS=1;SSC=2;GPV=3.0109E-23;SPV=5.8324E-1',
@@ -450,7 +449,7 @@ at 13th chromosome. \verb|fetch_gff()| method is what we need:
 
 
 \begin{verbatim}
->>> vcf.fetch_gff('VCF/HS_fetch_gff.gff3', '13', 'pseudogene')
+>>> vcf.fetch_gff('HS_fetch_gff.gff3', '13', 'pseudogene')
 \end{verbatim}
 
 
@@ -459,7 +458,7 @@ at 13th chromosome. \verb|fetch_gff()| method is what we need:
 
 
 \begin{verbatim}
->>> vcf.fetch_gff('VCF/HS_fetch_gff.gff3', '13', 'pseudogene', location=[1, 18270822])
+>>> vcf.fetch_gff('HS_fetch_gff.gff3', '13', 'pseudogene', location=[1, 18270822])
 Finding SV corresponding to pseudogene and chosen position
 chr13	20	.	GT	G	.	PASS	DP=77;SS=1;SSC=2;GPV=2.4504E-29;SPV=6.0772E-1	GT:GQ:DP:RD:AD:FREQ:DP4
 1/1:.:28:5:22:81.48%:0,5,1,21
@@ -539,7 +538,7 @@ Searching through the database can be based on strain's name, ec number, eco typ
 origin - such as country, longitude or latitude.
 
 
-\noindent Below there is a brief description of \verb|thousandgenome()| methods:
+\noindent Below there is a brief description of \verb|thousandgenomes()| methods:
 
 
 \begin{description}
