--- a/Doc/Tutorial/chapter_vcf.tex
+++ b/Doc/Tutorial/chapter_vcf.tex
@@ -188,7 +188,7 @@ Record(CHROM=1, POS=2, REF=T, ALT=[T[2:3[])
 >>> bnd = row.ALT[0]
 >>> print bnd.withinMainAssembly, bnd.orientation, bnd.remoteOrientation,
 bnd.connectingSequence
-True False True True
+True False True T
 \end{verbatim}
 
 \subsection{Record parameters}
